Rework solar boiler and add distilled water