@@ -4,7 +4,6 @@ import aztech.modern_industrialization.MIFluids;
 import aztech.modern_industrialization.MIText;
 import aztech.modern_industrialization.MITooltips;
 import aztech.modern_industrialization.inventory.ConfigurableFluidStack;
-import aztech.modern_industrialization.inventory.ConfigurableItemStack;
 import aztech.modern_industrialization.inventory.MIInventory;
 import aztech.modern_industrialization.inventory.SlotPositions;
 import aztech.modern_industrialization.machines.BEP;
@@ -15,21 +14,20 @@ import aztech.modern_industrialization.machines.gui.MachineGuiParameters;
 import aztech.modern_industrialization.machines.guicomponents.ProgressBar;
 import aztech.modern_industrialization.machines.models.MachineCasings;
 import aztech.modern_industrialization.machines.models.MachineModelClientData;
+import aztech.modern_industrialization.thirdparty.fabrictransfer.api.fluid.FluidVariant;
 import aztech.modern_industrialization.util.Tickable;
-import net.minecraft.core.Direction;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.level.material.Fluids;
 import net.neoforged.neoforge.fluids.FluidType;
-import net.swedz.extended_industrialization.machines.components.ExtendedSteamHeaterComponent;
+import net.swedz.extended_industrialization.machines.components.SteamProductionComponent;
+import net.swedz.extended_industrialization.machines.components.solar.SolarSunlightComponent;
 import net.swedz.extended_industrialization.machines.components.solar.boiler.SolarBoilerCalcificationComponent;
-import net.swedz.extended_industrialization.machines.components.solar.boiler.SolarBurningComponent;
 import net.swedz.extended_industrialization.machines.guicomponents.solarefficiency.SolarEfficiencyBar;
+import net.swedz.extended_industrialization.registry.fluids.EIFluids;
 import net.swedz.extended_industrialization.text.EIText;
 import net.swedz.extended_industrialization.tooltips.EITooltips;
+import org.apache.commons.compress.utils.Lists;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public final class SolarBoilerMachineBlockEntity extends MachineBlockEntity implements Tickable
@@ -51,11 +49,12 @@ public final class SolarBoilerMachineBlockEntity extends MachineBlockEntity impl
 	private final boolean bronze;
 	private final long    maxEuProduction;
 	
+	private final SolarSunlightComponent            sunlight;
 	private final SolarBoilerCalcificationComponent calcification;
-	private final ExtendedSteamHeaterComponent      steamHeater;
-	private final SolarBurningComponent             solarBurning;
 	
-	private IsActiveComponent isActiveComponent;
+	private final SteamProductionComponent steamProduction;
+	
+	private final IsActiveComponent isActiveComponent;
 	
 	public SolarBoilerMachineBlockEntity(BEP bep, boolean bronze)
 	{
@@ -65,37 +64,48 @@ public final class SolarBoilerMachineBlockEntity extends MachineBlockEntity impl
 				new OrientationComponent.Params(false, false, false)
 		);
 		
+		this.bronze = bronze;
+		maxEuProduction = bronze ? 4 : 8;
+		
 		int capacity = FluidType.BUCKET_VOLUME * (bronze ? 8 : 16);
 		
-		List<ConfigurableItemStack> itemStacks = Collections.emptyList();
-		SlotPositions itemPositions = new SlotPositions.Builder().build();
-		
-		List<ConfigurableFluidStack> fluidStacks = Arrays.asList(
-				ConfigurableFluidStack.lockedInputSlot(capacity, Fluids.WATER),
+		List<ConfigurableFluidStack> fluidStacks = List.of(
+				ConfigurableFluidStack.standardInputSlot(capacity),
 				ConfigurableFluidStack.lockedOutputSlot(capacity, MIFluids.STEAM.asFluid())
 		);
 		SlotPositions fluidPositions = new SlotPositions.Builder().addSlot(WATER_SLOT_X, WATER_SLOT_Y).addSlot(OUTPUT_SLOT_X, OUTPUT_SLOT_Y).build();
-		inventory = new MIInventory(itemStacks, fluidStacks, itemPositions, fluidPositions);
+		inventory = new MIInventory(List.of(), fluidStacks, new SlotPositions.Builder().build(), fluidPositions);
 		
-		this.bronze = bronze;
-		maxEuProduction = bronze ? 4 : 8;
+		sunlight = new SolarSunlightComponent(this);
 		calcification = new SolarBoilerCalcificationComponent();
-		steamHeater = new ExtendedSteamHeaterComponent(2400, 480, () -> (long) Math.ceil(maxEuProduction * calcification.getEfficiency()));
-		solarBurning = new SolarBurningComponent(steamHeater, bronze ? 1 : 2, 4);
-		this.isActiveComponent = new IsActiveComponent();
+		
+		steamProduction = new SteamProductionComponent(
+				inventory.fluidStorage,
+				List.of(Fluids.WATER, EIFluids.DISTILLED_WATER.asFluid()),
+				MIFluids.STEAM.variant(),
+				() -> (long) (maxEuProduction * this.getEfficiency(true)),
+				() -> 16
+		);
+		
+		isActiveComponent = new IsActiveComponent();
 		
 		this.registerGuiComponent(new ProgressBar.Server(
 				new ProgressBar.Parameters(BURNING_PROGRESS_X, BURNING_PROGRESS_Y, "furnace", true),
-				steamHeater::getWorkingTemperatureFullness
+				() -> this.getEfficiency(false)
 		));
 		this.registerGuiComponent(new SolarEfficiencyBar.Server(
 				new SolarEfficiencyBar.Parameters(SOLAR_EFFICIENCY_X, SOLAR_EFFICIENCY_Y),
-				solarBurning::isWorking,
-				() -> (int) ((steamHeater.getTemperatureFullness() * calcification.getEfficiency()) * 100),
+				sunlight::canOperate,
+				() -> (int) (this.getEfficiency(true) * 100),
 				() -> (int) (calcification.getCalcification() * 100)
 		));
 		
-		this.registerComponents(inventory, isActiveComponent, calcification, steamHeater, solarBurning);
+		this.registerComponents(inventory, sunlight, calcification, steamProduction, isActiveComponent);
+	}
+	
+	public float getEfficiency(boolean includeCalficiation)
+	{
+		return includeCalficiation ? sunlight.getClosenessToNoon() * calcification.getEfficiency() : sunlight.getClosenessToNoon();
 	}
 	
 	@Override
@@ -116,36 +126,37 @@ public final class SolarBoilerMachineBlockEntity extends MachineBlockEntity impl
 	@Override
 	public void tick()
 	{
-		if(level.isClientSide)
+		if(level.isClientSide())
 		{
 			return;
 		}
 		
-		steamHeater.tick(
-				Collections.singletonList(inventory.getFluidStacks().get(0)),
-				Collections.singletonList(inventory.getFluidStacks().get(1))
-		);
-		solarBurning.tick(level, this.getBlockPos());
+		boolean active = true;
 		
-		for(Direction direction : Direction.values())
+		if(sunlight.canOperate())
 		{
-			this.getInventory().autoExtractFluids(level, worldPosition, direction);
+			FluidVariant waterFluid = steamProduction.tryMakeSteam();
+			if(waterFluid.isBlank())
+			{
+				active = false;
+			}
+			else if(!waterFluid.isOf(EIFluids.DISTILLED_WATER.asFluid()))
+			{
+				calcification.tick();
+			}
+		}
+		else
+		{
+			active = false;
 		}
 		
-		if(steamHeater.isWorking())
-		{
-			calcification.tick();
-		}
-		
-		isActiveComponent.updateActive(steamHeater.isWorking(), this);
-		
-		this.setChanged();
+		isActiveComponent.updateActive(active, this);
 	}
 	
 	@Override
 	public List<Component> getTooltips()
 	{
-		List<Component> tooltips = new ArrayList<>();
+		List<Component> tooltips = Lists.newArrayList();
 		tooltips.add(
 				new MITooltips.Line(MIText.MaxEuProductionSteam)
 						.arg(maxEuProduction, MITooltips.EU_PER_TICK_PARSER)
@@ -153,7 +164,10 @@ public final class SolarBoilerMachineBlockEntity extends MachineBlockEntity impl
 						.build()
 		);
 		tooltips.add(
-				MITooltips.DEFAULT_PARSER.parse(EIText.SOLAR_BOILER_CALCIFICATION.text(EITooltips.RATIO_PERCENTAGE_PARSER.parse(SolarBoilerCalcificationComponent.MINIMUM_EFFICIENCY)))
+				MITooltips.DEFAULT_PARSER.parse(EIText.SOLAR_BOILER_CALCIFICATION.text(
+						EITooltips.RATIO_PERCENTAGE_PARSER.parse(SolarBoilerCalcificationComponent.MINIMUM_EFFICIENCY),
+						MITooltips.FLUID_PARSER.parse(EIFluids.DISTILLED_WATER.asFluid())
+				))
 		);
 		return tooltips;
 	}
